# ws

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: actions.rs  config.rs  db.rs  main.rs  migrate.rs
src/scanner/: claude.rs  codex.rs  git.rs  mod.rs
src/tui/: app.rs  confirmation.rs  mod.rs  tree.rs
ws/: CLAUDE.md  Cargo.toml
ws/src/: actions.rs  config.rs  db.rs  main.rs
ws/src/scanner/: claude.rs  git.rs  mod.rs
ws/src/tui/: app.rs  mod.rs  tree.rs
